@@ -37,12 +37,12 @@ namespace Mono.Posix {
 
 	[Obsolete ("Use Mono.Unix.Catalog")]
 	public class Catalog {
-		[DllImport("libintl")]
+		[DllImport("intl")]
 		static extern IntPtr bindtextdomain (IntPtr domainname, IntPtr dirname);
-		[DllImport("libintl")]
+		[DllImport("intl")]
 		static extern IntPtr bind_textdomain_codeset (IntPtr domainname,
 			IntPtr codeset);
-		[DllImport("libintl")]
+		[DllImport("intl")]
 		static extern IntPtr textdomain (IntPtr domainname);
 		
 		public static void Init (String package, String localedir)
@@ -58,7 +58,7 @@ namespace Mono.Posix {
 			Marshal.FreeHGlobal (iutf8);
 		}
 	
-		[DllImport("libintl")]
+		[DllImport("intl")]
 		static extern IntPtr gettext (IntPtr instring);
 		
 		public static String GetString (String s)
@@ -69,7 +69,7 @@ namespace Mono.Posix {
 			return t;
 		}
 	
-		[DllImport("libintl")]
+		[DllImport("intl")]
 		static extern IntPtr ngettext (IntPtr singular, IntPtr plural, Int32 n);
 		
 		public static String GetPluralString (String s, String p, Int32 n)
